fixed logo change with dark mode

--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -1,5 +1,17 @@
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  background-color: transparent;
+  visibility: hidden;
+}
+::-webkit-scrollbar-thumb {
+  visibility: hidden;
+  border-radius: 0;
+  background-color: var(--gray5);
+}
+
 body {
-  transition: all 0.3s ease;
+  transition: all 0.2s ease;
 }
 
 body.light-mode {
@@ -9,7 +21,7 @@ body.light-mode {
 }
 body.dark-mode {
   --gray1: #282f3b; /*sidebar bg*/
-  --gray2: hsl(218, 19%, 24%); /*sidebar active*/
+  --gray2: rgba(216, 221, 230, 0.06); /*sidebar active*/
   --gray3: #333d4c; /*icon bg*/
   --gray4: #7888a6; /*icon fill*/
   --gray5: #484e58; /*sidebar border*/
@@ -24,7 +36,7 @@ body.dark-mode {
 
 :root {
   --gray1: #f8f9fc; /*sidebar bg*/
-  --gray2: #f3f4f7; /*sidebar active*/
+  --gray2: rgba(216, 221, 230, 0.6); /*sidebar active*/
   --gray3: #f2f5fa; /*icon bg*/
   --gray4: #7888a6; /*icon fill*/
   --gray5: rgba(216, 221, 230, 0.6); /*sidebar border*/
